--- a/src/mapbox-gl.css
+++ b/src/mapbox-gl.css
@@ -15,7 +15,8 @@
 .mapboxgl-ctrl-bottom-left,
 .mapboxgl-ctrl-bottom-right { position: absolute; pointer-events: none; z-index: 2; }
 .mapboxgl-ctrl-top-left     { top: 0; left: 0; }
-.mapboxgl-ctrl-top-right    { top: 200px; right: 0; }
+/* set in App.scss to use sass vars */
+/* .mapboxgl-ctrl-top-right    { top: 0; right: 0; } */
 .mapboxgl-ctrl-bottom-left  { bottom: 0; left: 0; }
 .mapboxgl-ctrl-bottom-right { right: 0; bottom: 0; }
 
@@ -27,7 +28,8 @@
     transform: translate(0, 0);
 }
 .mapboxgl-ctrl-top-left .mapboxgl-ctrl     { margin: 10px 0 0 10px; float: left; }
-.mapboxgl-ctrl-top-right .mapboxgl-ctrl    { margin: 10px 10px 0 0; float: right; }
+/* set in App.scss to use sass vars */
+/* .mapboxgl-ctrl-top-right .mapboxgl-ctrl    { margin: 10px 10px 0 0; float: right; } */
 .mapboxgl-ctrl-bottom-left .mapboxgl-ctrl  { margin: 0 0 10px 10px; float: left; }
 .mapboxgl-ctrl-bottom-right .mapboxgl-ctrl { margin: 0 10px 10px 0; float: right; }
 
