--- a/src/App.scss
+++ b/src/App.scss
@@ -152,7 +152,7 @@ html, body, #root, .app, .map-container {
     width: 27px;
     stroke-width: 5;
     position: absolute;
-    right: 0;
+    right: 7px;
     top: 10px;
   }
 
