--- a/src/App.scss
+++ b/src/App.scss
@@ -176,11 +176,23 @@ html, body, #root, .app, .map-container {
   .content {
     padding: 35px 35px 45px 45px;
     // height: 100%;
-    .header {
-      display: flex;
+    .nav {
+      p {
+        display: inline;
+        font-size: 14px;
+        padding-right: 6px;
+        &.active {
+          font-weight: 700;
+        }
+      }
+    }
+    .nav, .header {
       padding-bottom: 20px;
       margin-bottom: 20px;
-      border-bottom: 1px solid $dark-gray;
+      border-bottom: 1px solid $dark-gray;  
+    }
+    .header {
+      display: flex;
       .info {
         flex: 47px 0 0;
         flex-shrink: 0;
@@ -198,15 +210,21 @@ html, body, #root, .app, .map-container {
         font-weight: 700;
       }
     }
-    h2 {
-      font-size: 15px;
-      font-weight: 400;
-      padding: 10px 0 6px;
-    }
-    p {
-      font-size: 14px;
-      font-weight: 300;
-      padding: 4px 0;
+
+    .section-text {
+
+      p {
+        font-size: 14px;
+        font-weight: 300;
+        // padding: 4px 0;
+        display: inline;
+
+        &.advance-button {
+          padding-left: 7px;
+          font-weight: 700;
+          white-space: nowrap;
+        }
+      }
     }
   }
 }
