--- a/src/App.scss
+++ b/src/App.scss
@@ -207,23 +207,32 @@ html, body, #root, .app, .map-container {
     .nav {
       .section-name {
         cursor: pointer;
+        color: #757575;
+        &.active {
+          color: #000;
+        }
+      }
+      p.divider {
+        display: none;
       }
       p {
         display: inline;
         font-size: 14px;
-        padding-right: 6px;
+        padding-right: 14px;
         &.active {
           font-weight: 700;
         }
       }
     }
-    .nav, .header {
-      padding-bottom: 20px;
-      margin-bottom: 20px;
-      border-bottom: 1px solid $dark-gray;  
+    .nav {
+      border-bottom: 1px solid $dark-gray; 
+      padding-bottom: 8px;
+      margin-bottom: 20px; 
     }
     .header {
       display: flex;
+      padding-bottom: 0px;
+      margin-bottom: 20px; 
       .info {
         flex: 47px 0 0;
         flex-shrink: 0;
@@ -361,26 +370,30 @@ html, body, #root, .app, .map-container {
 }
 
 .tooltip .detail {
-  font-size: 12px;
+  font-size: 14px;
   padding-top: 5px;
 }
 
 .tooltip .name {
   font-weight: 700;
-  font-size: 14px;
+  font-size: 15px;
 }
 
 .tooltip .click-hint {
-  font-size: 8px;
-  padding-top: 5px;
-  text-align: center;
+  font-size: 12px;
+  font-weight: 400;
+  padding-top: 16px;
+  text-align: left;
+  text-transform: uppercase;
+  color: #757575;
 }
 
 .tooltip .location-title {
   padding-top: 8px;
-  font-weight: 300;
-  font-size: 9px;
+  font-weight: 400;
+  font-size: 12px;
   text-transform: uppercase;
+  color: #757575;
 }
 
 .tooltip .hovered-location.emphasized {
@@ -475,12 +488,15 @@ html, body, #root, .app, .map-container {
           font-weight: 600;
         }
         svg {
-          position: absolute;
-          top: 44%;
-          right: 20px;
+          position: relative;
+         // top: 44%;
+         // right: 20px;
+          margin-left: 8px;
+          position: relative;
+          top: 2px;
         }
         .maximum {
-          display: block;
+          display: inline-block;
         }
       }
     }
@@ -696,7 +712,7 @@ html, body, #root, .app, .map-container {
           .cell {
             padding-top: 20px; //FS
             // height: 100px;
-            font-size: 14px; //FS
+            font-size: 15px; //FS
             line-height: 21px; //FS
             letter-spacing: 0.03em;
             word-wrap: break-word;
