--- a/src/App.scss
+++ b/src/App.scss
@@ -61,7 +61,7 @@ $intro-panel-width: 450px;
 $intro-panel-icon-offset: 8px;
 $standard-border-radius: 4px;
 $zoom-controls-top: 40vh;
-$intro-next-prev-height: 55px;
+$intro-next-prev-height: 60px;
 
 * {
   margin: 0;
@@ -82,9 +82,9 @@ html, body, #root, .app, .map-container {
 }
 
 .trigger-icon {
-  stroke: black;
-  stroke-width: 3;
-  fill: none;
+  //stroke: black;
+ // stroke-width: 3;
+  //fill: none;
   &.remove-icon, &.expand-icon, &.collapse-icon, &.stemless {
     cursor: pointer;
     * {
@@ -185,7 +185,7 @@ html, body, #root, .app, .map-container {
   min-height: 200px;
   width: $intro-panel-width;
   background: white;
-  border: solid $dark-gray 1px;
+  //border: solid $dark-gray 1px;
   overflow: visible;
   border-top-right-radius: $standard-border-radius;
   border-bottom-right-radius: $standard-border-radius;
@@ -194,26 +194,33 @@ html, body, #root, .app, .map-container {
   .intro-panel {
     height: 100%;
     overflow: scroll;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
   }
 
   .trigger {
     position: absolute;
     right: -32px;
     top: 10px;
-    padding: 7px;
-    border: solid $dark-gray 1px;
+    padding: 8px 8px 8px 11px;
+    border: solid #fff 1px;
     border-left: none;
-    border-top-right-radius: $standard-border-radius;
-    border-bottom-right-radius: $standard-border-radius;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
     background: white;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
     .trigger-icon {
-      stroke-width: 6;
-      width: 17px;
+     // stroke-width: 6;
+      width: 12px;
+      height: 12px;
     }
   }
 
+
   &.closed {
     left: -$intro-panel-width;
+    .trigger {
+      padding: 8px 11px 8px 8px;
+    }
   }
 
   .content {
@@ -250,9 +257,11 @@ html, body, #root, .app, .map-container {
       padding-bottom: 0px;
       margin-bottom: 20px; 
       .info {
-        flex: 47px 0 0;
+        flex: 27px 0;
         flex-shrink: 0;
         align-self: center;
+        margin-top: 4px;
+        margin-right: 5px;
         .info-icon {
           stroke-width: 0;
           width: 100%;
@@ -262,15 +271,17 @@ html, body, #root, .app, .map-container {
         padding-left: 10px;
         font-size: 18px;
         font-weight: 700;
+        line-height: 1.3;
       }
     }
 
     .section-text {
       p {
         font-size: 14px;
-        font-weight: 300;
+        font-weight: 400;
         // padding: 4px 0;
         display: inline;
+        color: $slate-gray;
 
         &.advance-button {
          // padding-left: 7px;
@@ -472,8 +483,8 @@ html, body, #root, .app, .map-container {
     font-size: 14px;
     .trigger-icon {
       stroke: $hint-content;
-      stroke-width: 8; //FS
-      width: 12px; //FS
+     // stroke-width: 8; //FS
+     width: 12px; //FS
     }
 
     &.scroll-hint {
@@ -753,7 +764,7 @@ html, body, #root, .app, .map-container {
 
             .remove-icon {
               position: absolute;
-              width: 14px; //FS
+              width: 22px; //FS
               top: 0; //FS
               right: 0; //FS
               padding: 6px;
