--- a/src/App.scss
+++ b/src/App.scss
@@ -769,6 +769,9 @@ html, body, #root, .app, .map-container {
               right: 0; //FS
               padding: 6px;
               box-sizing: content-box;
+              stroke: #757575;
+              
+
             }
           }
         }
